--- a/css/index.css
+++ b/css/index.css
@@ -63,6 +63,17 @@
 	width: 100px;
 }
 
+.btnList {
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+
+.btnList a{
+	margin: 5px;
+	width: 200px;
+	height: 50px;
+}
+
 h1 a {
 	color: #000000;
 }
